--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
   },
   "dependencies": {
     "aoi.js": "^6.0.0-dev.3979fab.1661655211",
-    "discord.js": "^14.0.0-dev.1647259751.2297c2b",
-    "uglify-js": "^3.15.5"
+    "discord.js": "^14.6.0",
+    "uglify-js": "^3.15.5",
+    "undici": "^5.12.0"
   },
   "type": "commonjs"
 }
