--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "aoi.js": "^6.0.0-dev.3979fab.1661655211",
+    "aoi.js": "^6.0.2",
     "discord.js": "^14.6.0",
     "uglify-js": "^3.15.5",
     "undici": "^5.12.0"
